--- a/src/app/partials/syllabus/syllabus.html
+++ b/src/app/partials/syllabus/syllabus.html
@@ -1,5 +1,15 @@
 <h2>Ramschema</h2>
 
+<label for="search-box">Sök:</label><br>
+<input
+  type="text"
+  placeholder="Sök kurser i ramschemat"
+  [(ngModel)]="searchTerm"
+  (input)="filterCourses()"
+  class="search-box"
+  id="search-box"
+/>
+
 <table>
   <thead>
     <tr>
