--- a/src/app/partials/syllabus/syllabus.css
+++ b/src/app/partials/syllabus/syllabus.css
@@ -1,3 +1,10 @@
+/*
+Författare: Leander Norberg
+Projektnamn: Moment 4
+Beskrivning: Praktisk laboration utvecklat i samband med kursen 
+Programmering i TypeScript (DT208G ) vid mittuniversitetet, VT2025 
+*/
+
 th {
     line-height: 2em;
     border-bottom: 1px solid gainsboro;
