--- a/src/app/partials/syllabus/syllabus.html
+++ b/src/app/partials/syllabus/syllabus.html
@@ -1,3 +1,10 @@
+<!--
+Författare: Leander Norberg
+Projektnamn: Moment 4
+Beskrivning: Praktisk laboration utvecklat i samband med kursen 
+Programmering i TypeScript (DT208G ) vid mittuniversitetet, VT2025 
+-->
+
 <h2>Ramschema</h2>
 
 <label for="search-box">Sök:</label><br>
